Initial Stemming and feature and target separation

--- a/fake_news_predictor.ipynb
+++ b/fake_news_predictor.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "feb9f2e3",
    "metadata": {},
    "outputs": [],
@@ -27,6 +27,10 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import re\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem.porter import PorterStemmer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn import svm\n",
@@ -39,15 +43,583 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "acfc4280",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\NEW\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping corpora\\stopwords.zip.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('stopwords')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "fab1ad4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'about', 'above', 'after', 'again', 'against', 'ain', 'all', 'am', 'an', 'and', 'any', 'are', 'aren', \"aren't\", 'as', 'at', 'be', 'because', 'been', 'before', 'being', 'below', 'between', 'both', 'but', 'by', 'can', 'couldn', \"couldn't\", 'd', 'did', 'didn', \"didn't\", 'do', 'does', 'doesn', \"doesn't\", 'doing', 'don', \"don't\", 'down', 'during', 'each', 'few', 'for', 'from', 'further', 'had', 'hadn', \"hadn't\", 'has', 'hasn', \"hasn't\", 'have', 'haven', \"haven't\", 'having', 'he', \"he'd\", \"he'll\", 'her', 'here', 'hers', 'herself', \"he's\", 'him', 'himself', 'his', 'how', 'i', \"i'd\", 'if', \"i'll\", \"i'm\", 'in', 'into', 'is', 'isn', \"isn't\", 'it', \"it'd\", \"it'll\", \"it's\", 'its', 'itself', \"i've\", 'just', 'll', 'm', 'ma', 'me', 'mightn', \"mightn't\", 'more', 'most', 'mustn', \"mustn't\", 'my', 'myself', 'needn', \"needn't\", 'no', 'nor', 'not', 'now', 'o', 'of', 'off', 'on', 'once', 'only', 'or', 'other', 'our', 'ours', 'ourselves', 'out', 'over', 'own', 're', 's', 'same', 'shan', \"shan't\", 'she', \"she'd\", \"she'll\", \"she's\", 'should', 'shouldn', \"shouldn't\", \"should've\", 'so', 'some', 'such', 't', 'than', 'that', \"that'll\", 'the', 'their', 'theirs', 'them', 'themselves', 'then', 'there', 'these', 'they', \"they'd\", \"they'll\", \"they're\", \"they've\", 'this', 'those', 'through', 'to', 'too', 'under', 'until', 'up', 've', 'very', 'was', 'wasn', \"wasn't\", 'we', \"we'd\", \"we'll\", \"we're\", 'were', 'weren', \"weren't\", \"we've\", 'what', 'when', 'where', 'which', 'while', 'who', 'whom', 'why', 'will', 'with', 'won', \"won't\", 'wouldn', \"wouldn't\", 'y', 'you', \"you'd\", \"you'll\", 'your', \"you're\", 'yours', 'yourself', 'yourselves', \"you've\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(stopwords.words('english'))    # These stopwords are not important for out processing as they don't have any affect"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "aae6e2bc",
+   "id": "706c28ab",
+   "metadata": {},
+   "source": [
+    "Data Preprocessing start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c4e408c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake_news = pd.read_csv(r'C:\\Users\\NEW\\OneDrive\\Desktop\\Fake News Prediction System\\Day4_Fake_News_Data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "2f08c908",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>title</th>\n",
+       "      <th>author</th>\n",
+       "      <th>text</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>House Dem Aide: We Didn’t Even See Comey’s Let...</td>\n",
+       "      <td>Darrell Lucus</td>\n",
+       "      <td>House Dem Aide: We Didn’t Even See Comey’s Let...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>FLYNN: Hillary Clinton, Big Woman on Campus - ...</td>\n",
+       "      <td>Daniel J. Flynn</td>\n",
+       "      <td>Ever get the feeling your life circles the rou...</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Why the Truth Might Get You Fired</td>\n",
+       "      <td>Consortiumnews.com</td>\n",
+       "      <td>Why the Truth Might Get You Fired October 29, ...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>15 Civilians Killed In Single US Airstrike Hav...</td>\n",
+       "      <td>Jessica Purkiss</td>\n",
+       "      <td>Videos 15 Civilians Killed In Single US Airstr...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iranian woman jailed for fictional unpublished...</td>\n",
+       "      <td>Howard Portnoy</td>\n",
+       "      <td>Print \\nAn Iranian woman has been sentenced to...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id                                              title              author  \\\n",
+       "0   0  House Dem Aide: We Didn’t Even See Comey’s Let...       Darrell Lucus   \n",
+       "1   1  FLYNN: Hillary Clinton, Big Woman on Campus - ...     Daniel J. Flynn   \n",
+       "2   2                  Why the Truth Might Get You Fired  Consortiumnews.com   \n",
+       "3   3  15 Civilians Killed In Single US Airstrike Hav...     Jessica Purkiss   \n",
+       "4   4  Iranian woman jailed for fictional unpublished...      Howard Portnoy   \n",
+       "\n",
+       "                                                text  label  \n",
+       "0  House Dem Aide: We Didn’t Even See Comey’s Let...      1  \n",
+       "1  Ever get the feeling your life circles the rou...      0  \n",
+       "2  Why the Truth Might Get You Fired October 29, ...      1  \n",
+       "3  Videos 15 Civilians Killed In Single US Airstr...      1  \n",
+       "4  Print \\nAn Iranian woman has been sentenced to...      1  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake_news.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "24b8ee86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>20800.000000</td>\n",
+       "      <td>20800.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>10399.500000</td>\n",
+       "      <td>0.500625</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>6004.587135</td>\n",
+       "      <td>0.500012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>5199.750000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>10399.500000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>15599.250000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>20799.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 id         label\n",
+       "count  20800.000000  20800.000000\n",
+       "mean   10399.500000      0.500625\n",
+       "std     6004.587135      0.500012\n",
+       "min        0.000000      0.000000\n",
+       "25%     5199.750000      0.000000\n",
+       "50%    10399.500000      1.000000\n",
+       "75%    15599.250000      1.000000\n",
+       "max    20799.000000      1.000000"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake_news.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "b7496b5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.DataFrame'>\n",
+      "RangeIndex: 20800 entries, 0 to 20799\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column  Non-Null Count  Dtype\n",
+      "---  ------  --------------  -----\n",
+      " 0   id      20800 non-null  int64\n",
+      " 1   title   20242 non-null  str  \n",
+      " 2   author  18843 non-null  str  \n",
+      " 3   text    20761 non-null  str  \n",
+      " 4   label   20800 non-null  int64\n",
+      "dtypes: int64(2), str(3)\n",
+      "memory usage: 812.6 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "fake_news.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "199af4ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20800, 5)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake_news.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "8025c4b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id           0\n",
+       "title      558\n",
+       "author    1957\n",
+       "text        39\n",
+       "label        0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake_news.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e8843e77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake_news = fake_news.fillna(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5e1488ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "id        0\n",
+       "title     0\n",
+       "author    0\n",
+       "text      0\n",
+       "label     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake_news.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b3ba76e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake_news['content'] = fake_news['author'] + ' ' + fake_news['title']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4c9b61de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        Darrell Lucus House Dem Aide: We Didn’t Even S...\n",
+      "1        Daniel J. Flynn FLYNN: Hillary Clinton, Big Wo...\n",
+      "2        Consortiumnews.com Why the Truth Might Get You...\n",
+      "3        Jessica Purkiss 15 Civilians Killed In Single ...\n",
+      "4        Howard Portnoy Iranian woman jailed for fictio...\n",
+      "                               ...                        \n",
+      "20795    Jerome Hudson Rapper T.I.: Trump a ’Poster Chi...\n",
+      "20796    Benjamin Hoffman N.F.L. Playoffs: Schedule, Ma...\n",
+      "20797    Michael J. de la Merced and Rachel Abrams Macy...\n",
+      "20798    Alex Ansary NATO, Russia To Hold Parallel Exer...\n",
+      "20799              David Swanson What Keeps the F-35 Alive\n",
+      "Name: content, Length: 20800, dtype: str\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fake_news['content'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "7fecb787",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "label\n",
+       "1    10413\n",
+       "0    10387\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fake_news['label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "fd964429",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = fake_news.drop('label', axis=1)\n",
+    "Y = fake_news['label']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "494a3d13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['id', 'title', 'author', 'text', 'content'], dtype='str')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "47326036",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0        1\n",
+      "1        0\n",
+      "2        1\n",
+      "3        1\n",
+      "4        1\n",
+      "        ..\n",
+      "20795    0\n",
+      "20796    0\n",
+      "20797    0\n",
+      "20798    1\n",
+      "20799    1\n",
+      "Name: label, Length: 20800, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbaf7259",
+   "metadata": {},
+   "source": [
+    "Stemming:\n",
+    "Stemming is the process of reducing a word to it's root word\n",
+    "Example: acting, actor, actress --> act --> rootword for all the 3 words"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "c4eaded2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "port_stem = PorterStemmer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "e82d654f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stemming(content):      # for fake_news['content']\n",
+    "    stemmed_content = re.sub('[^a-zA-Z]', ' ', content)     # Replaces anything that is NOT a letter with a space\n",
+    "    stemmed_content = stemmed_content.lower().split()      # Lower case all the words and then split them into separate words \n",
+    "    stemmed_content = [port_stem.stem(word) for word in stemmed_content if not word in stopwords.words('english')]       # This line removes stopwords and performs stemming\n",
+    "    stemmed_content = ' '.join(stemmed_content)     # Again join the list made with split into words with spaces\n",
+    "    return stemmed_content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "5ae931bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake_news['content'] = fake_news['content'].apply(stemming)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7f78574e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = fake_news['content'].values     # .values converts pandas series into numpy arrays\n",
+    "Y = fake_news['label'].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3610f52d",
+   "metadata": {},
+   "source": [
+    "Converting textual data into numerical data as computer cannot understand text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fdb2a062",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = TfidfVectorizer()\n",
+    "vectorizer.fit(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36d762a1",
    "metadata": {},
    "source": []
   }
