Accuracy of 98.03% and excellent recall, f1_score and precision. Developed an input system for this also

--- a/fake_news_predictor.ipynb
+++ b/fake_news_predictor.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "feb9f2e3",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "acfc4280",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
        "True"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "fab1ad4a",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "c4e408c2",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "2f08c908",
    "metadata": {},
    "outputs": [
@@ -203,7 +203,7 @@
        "4  Print \\nAn Iranian woman has been sentenced to...      1  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "24b8ee86",
    "metadata": {},
    "outputs": [
@@ -300,7 +300,7 @@
        "max    20799.000000      1.000000"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "id": "b7496b5f",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "199af4ff",
    "metadata": {},
    "outputs": [
@@ -350,7 +350,7 @@
        "(20800, 5)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "id": "8025c4b8",
    "metadata": {},
    "outputs": [
@@ -376,7 +376,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 10,
    "id": "e8843e77",
    "metadata": {},
    "outputs": [],
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "id": "5e1488ba",
    "metadata": {},
    "outputs": [
@@ -412,7 +412,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "id": "b3ba76e4",
    "metadata": {},
    "outputs": [],
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "id": "4c9b61de",
    "metadata": {},
    "outputs": [
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 14,
    "id": "7fecb787",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "id": "fd964429",
    "metadata": {},
    "outputs": [],
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 16,
    "id": "494a3d13",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 17,
    "id": "47326036",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 18,
    "id": "c4eaded2",
    "metadata": {},
    "outputs": [],
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 19,
    "id": "e82d654f",
    "metadata": {},
    "outputs": [],
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "id": "5ae931bd",
    "metadata": {},
    "outputs": [],
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "7f78574e",
    "metadata": {},
    "outputs": [],
@@ -608,12 +608,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "fdb2a062",
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectorizer = TfidfVectorizer()     \n",
+    "# vectorizer = TfidfVectorizer()     \n",
     "# TF-IDF stands for:\n",
     "# TF → Term Frequency\n",
     "# IDF → Inverse Document Frequency\n",
@@ -628,14 +628,14 @@
     "# IDF = log (Total number of documents / Number of documents containing the word)\n",
     "# Rare but important words → high IDF\n",
     "# Common words → low IDF\n",
-    "vectorizer.fit(X)\n",
+    "# vectorizer.fit(X)\n",
     "\n",
-    "X = vectorizer.transform(X)"
+    "# X = vectorizer.transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "id": "61fb2e23",
    "metadata": {},
    "outputs": [
@@ -643,60 +643,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<Compressed Sparse Row sparse matrix of dtype 'float64'\n",
-      "\twith 210687 stored elements and shape (20800, 17128)>\n",
-      "  Coords\tValues\n",
-      "  (0, 267)\t0.2701012497770876\n",
-      "  (0, 2483)\t0.36765196867972083\n",
-      "  (0, 2959)\t0.24684501285337127\n",
-      "  (0, 3600)\t0.3598939188262558\n",
-      "  (0, 3792)\t0.27053324808454915\n",
-      "  (0, 4973)\t0.23331696690935097\n",
-      "  (0, 7005)\t0.2187416908935914\n",
-      "  (0, 7692)\t0.24785219520671598\n",
-      "  (0, 8630)\t0.2921251408704368\n",
-      "  (0, 8909)\t0.36359638063260746\n",
-      "  (0, 13473)\t0.2565896679337956\n",
-      "  (0, 15686)\t0.2848506356272864\n",
-      "  (1, 1497)\t0.2939891562094648\n",
-      "  (1, 1894)\t0.15521974226349364\n",
-      "  (1, 2223)\t0.3827320386859759\n",
-      "  (1, 2813)\t0.19094574062359204\n",
-      "  (1, 3568)\t0.26373768806048464\n",
-      "  (1, 5503)\t0.7143299355715573\n",
-      "  (1, 6816)\t0.1904660198296849\n",
-      "  (1, 16799)\t0.30071745655510157\n",
-      "  (2, 2943)\t0.3179886800654691\n",
-      "  (2, 3103)\t0.46097489583229645\n",
-      "  (2, 5389)\t0.3866530551182615\n",
-      "  (2, 5968)\t0.3474613386728292\n",
-      "  (2, 9620)\t0.49351492943649944\n",
-      "  :\t:\n",
-      "  (20797, 3643)\t0.2115550061362374\n",
-      "  (20797, 7042)\t0.21799048897828685\n",
-      "  (20797, 8364)\t0.22322585870464115\n",
-      "  (20797, 8988)\t0.36160868928090795\n",
-      "  (20797, 9518)\t0.29542040034203126\n",
-      "  (20797, 9588)\t0.17455348025522197\n",
-      "  (20797, 10306)\t0.08038079000566466\n",
-      "  (20797, 12138)\t0.24778257724396505\n",
-      "  (20797, 12344)\t0.27263457663336677\n",
-      "  (20797, 13122)\t0.24825263521976057\n",
-      "  (20797, 14967)\t0.3115945315488075\n",
-      "  (20797, 15295)\t0.08159261204402356\n",
-      "  (20797, 16996)\t0.08315655906109998\n",
-      "  (20798, 350)\t0.2844693781907258\n",
-      "  (20798, 588)\t0.3112141524638974\n",
-      "  (20798, 1125)\t0.4460515589182237\n",
-      "  (20798, 5032)\t0.40837014502395297\n",
-      "  (20798, 6889)\t0.3249628569429943\n",
-      "  (20798, 10177)\t0.31924963701870285\n",
-      "  (20798, 11052)\t0.4460515589182237\n",
-      "  (20798, 13046)\t0.2236326748827061\n",
-      "  (20799, 377)\t0.5677577267055112\n",
-      "  (20799, 3623)\t0.37927626273066584\n",
-      "  (20799, 8036)\t0.45983893273780013\n",
-      "  (20799, 14852)\t0.5677577267055112\n"
+      "<StringArray>\n",
+      "[                                              'darrel lucu hous dem aid even see comey letter jason chaffetz tweet',\n",
+      "                                                    'daniel j flynn flynn hillari clinton big woman campu breitbart',\n",
+      "                                                                            'consortiumnew com truth might get fire',\n",
+      "                                                          'jessica purkiss civilian kill singl us airstrik identifi',\n",
+      "                              'howard portnoy iranian woman jail fiction unpublish stori woman stone death adulteri',\n",
+      " 'daniel nussbaum jacki mason hollywood would love trump bomb north korea lack tran bathroom exclus video breitbart',\n",
+      "                                 'life life luxuri elton john favorit shark pictur stare long transcontinent flight',\n",
+      "                               'alissa j rubin beno hamon win french socialist parti presidenti nomin new york time',\n",
+      "                                        'excerpt draft script donald trump q ampa black church pastor new york time',\n",
+      "                      'megan twohey scott shane back channel plan ukrain russia courtesi trump associ new york time',\n",
+      " ...\n",
+      "                                 'adam shaw nikki haley blast u n human right offic unfair bia israel latest report',\n",
+      "                                       'daniel greenfield lawyer kept hillari campaign chief jail doj hillari probe',\n",
+      "                                                 'john hayward jakarta bomb kill three polic offic link islam state',\n",
+      "                                                 'robert rich idiot destroy trump hollywood star get exactli deserv',\n",
+      "                                                   'lee stranahan trump putin smart retali obama sanction breitbart',\n",
+      "                                                            'jerom hudson rapper trump poster child white supremaci',\n",
+      "                                                  'benjamin hoffman n f l playoff schedul matchup odd new york time',\n",
+      "                       'michael j de la merc rachel abram maci said receiv takeov approach hudson bay new york time',\n",
+      "                                                              'alex ansari nato russia hold parallel exercis balkan',\n",
+      "                                                                                         'david swanson keep f aliv']\n",
+      "Length: 20800, dtype: str\n"
      ]
     }
    ],
@@ -706,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "id": "ea928bba",
    "metadata": {},
    "outputs": [],
@@ -716,7 +685,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 48,
+   "id": "3fa05c81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = TfidfVectorizer()  \n",
+    "X_train_vec = vectorizer.fit_transform(X_train)\n",
+    "X_test_vec = vectorizer.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "dc1743b4",
    "metadata": {},
    "outputs": [],
@@ -726,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "id": "482cded9",
    "metadata": {},
    "outputs": [
@@ -1638,29 +1619,29 @@
        "LogisticRegression()"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train, Y_train)"
+    "model.fit(X_train_vec, Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 32,
    "id": "decf486b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "logistic_train_pred = model.predict(X_train)\n",
+    "logistic_train_pred = model.predict(X_train_vec)\n",
     "training_accuracy = accuracy_score(logistic_train_pred, Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 33,
    "id": "c8827729",
    "metadata": {},
    "outputs": [
@@ -1668,7 +1649,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training accuracy with Logistic Regression =  98.64 %\n"
+      "Training accuracy with Logistic Regression =  98.69 %\n"
      ]
     }
    ],
@@ -1678,18 +1659,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 35,
    "id": "01cae715",
    "metadata": {},
    "outputs": [],
    "source": [
-    "logistic_test_pred = model.predict(X_test)\n",
+    "logistic_test_pred = model.predict(X_test_vec)\n",
     "testing_accuracy = accuracy_score(logistic_test_pred, Y_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 36,
    "id": "57df2974",
    "metadata": {},
    "outputs": [
@@ -1697,17 +1678,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test accuracy =  97.91 %\n"
+      "Test accuracy with Logistic Regression =  98.03 %\n"
      ]
     }
    ],
    "source": [
-    "print(\"Test accuracy = \", f\"{round(testing_accuracy*100, 2)} %\")"
+    "print(\"Test accuracy with Logistic Regression = \", f\"{round(testing_accuracy*100, 2)} %\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
+   "id": "0273f869",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.99      0.97      0.98      2077\n",
+      "           1       0.97      0.99      0.98      2083\n",
+      "\n",
+      "    accuracy                           0.98      4160\n",
+      "   macro avg       0.98      0.98      0.98      4160\n",
+      "weighted avg       0.98      0.98      0.98      4160\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(Y_test, logistic_test_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "5615a8d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2012,   65],\n",
+       "       [  17, 2066]])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(Y_test, logistic_test_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "56b630fb",
    "metadata": {},
    "outputs": [
@@ -1721,7 +1751,7 @@
     }
    ],
    "source": [
-    "X_new = X_test[0]\n",
+    "X_new = X_test_vec[0]\n",
     "\n",
     "prediction = model.predict(X_new)\n",
     "print(prediction)\n",
@@ -1733,9 +1763,85 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "36d762a1",
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "983996be",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_news(author, title):\n",
+    "    # Combine author and title (same as training)\n",
+    "    content = author + \" \" + title\n",
+    "    \n",
+    "    # Apply preprocessing\n",
+    "    content = stemming(content)\n",
+    "    \n",
+    "    # Convert to TF-IDF (IMPORTANT: transform only)\n",
+    "    content_vec = vectorizer.transform([content])\n",
+    "    \n",
+    "    # Predict\n",
+    "    prediction = model.predict(content_vec)\n",
+    "    \n",
+    "    # Output result\n",
+    "    if prediction[0] == 1:\n",
+    "        return \"🟢 This news is REAL\"\n",
+    "    else:\n",
+    "        return \"🔴 This news is FAKE\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "8165a1b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🟢 This news is REAL\n"
+     ]
+    }
+   ],
+   "source": [
+    "author = input(\"Enter author name: \")\n",
+    "title = input(\"Enter news title: \")\n",
+    "\n",
+    "result = predict_news(author, title)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "5bce297a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🔴 This news is FAKE\n"
+     ]
+    }
+   ],
+   "source": [
+    "# test\n",
+    "\n",
+    "print(\n",
+    "    predict_news(\n",
+    "        author=\"John Doe\",\n",
+    "        title=\"Government announces new economic reforms\"\n",
+    "    )\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f3be868",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
